Changes: 	Resources being loaded from absolute locations, no need to provide class object to loader methods. Fixes: 	Added missing ConsensusThreshold ComboBox builder